# cashflow-agentic-workflow

./: .gitignore  CLAUDE.md  Makefile  README.md  langgraph.json  main.py  pyproject.toml  telegram_main.py
app/agents/: base_agent.py  expense_agent.py  planner_agent.py  router_agent.py
app/agents/expense/: __init__.py  graph.py  schemas.py  tools.py
app/agents/expense/prompts/: agent.md
app/agents/router/: __init__.py  graph.py
app/agents/router/prompts/: agent.md
app/agents/shared/: base.py
app/api/: __init__.py  client.py  exceptions.py
app/config/: settings.py
app/integrations/telegram/: bot.py  handlers.py
app/llm/: llm_client.py  llm_config.py  llm_factory.py  registry.py
app/llm/providers/: groq.py  ollama.py  openai.py
app/schemas/: expense.py
app/tools/: expense_tools.py
app/workflow/: graph.py
tests/workflow/: test_graph.py
