[project]
name = "cashflow-agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.1.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.9",
    "langsmith>=0.4.59",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=21.11",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
